--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Флагиан Консалтинг</title>
-<!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
-            <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
-            <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
+    <!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
+    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -26,9 +26,10 @@
     <header>
         <!--     OFFcanvas  навигация -->
         <nav class="navbar navbar-dark nav_flag fixed-top">
-<!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
+            <!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="images/logo_2.png" alt="Флагман Консалтинг лого"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_2.png"
+                                                               alt="Флагман Консалтинг лого"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -108,74 +109,161 @@
                                 <a class="nav-link" href="#">Контакты. Обратная связь</a>
                             </li>
                         </ul>
-<!--                        <form class="d-flex mt-3" role="search">-->
-<!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
-<!--                            <button class="btn btn-success" type="submit">Поиск</button>-->
-<!--                        </form>-->
+                        <!--                        <form class="d-flex mt-3" role="search">-->
+                        <!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
+                        <!--                            <button class="btn btn-success" type="submit">Поиск</button>-->
+                        <!--                        </form>-->
                     </div>
                 </div>
             </div>
         </nav>
         <!--  end of навигация -->
-<!--        <h1 class="montserrat-alternates-bold">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>-->
+        <!--        <h1 class="montserrat-alternates-bold">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>-->
     </header>
     <!-- end of шапка -->
 
+
+    <!--контент-->
+    <div class="row m-5"><!--помещаем в блок для трех колонок-->
+        <h1 class="text-center pb-3">Тренинги</h1>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--первая колонка про горы-->
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Менеджеры по работе с ключевыми клиентами</h5>
+                    <img src="images/slides/slide1.jpg" class="card-img-top rounded"
+                         alt="Менеджеры по работе с ключевыми клиентами">
+                    <p class="card-text">
+                    <ul>
+                        <li>Управление ключевым клиентом – все аспекты функционала КАМ</li>
+                        <li>Влияние в бизнесе</li>
+                        <li>Эффективная презентация Коммерческого Предложения</li>
+                        <li>Профессиональные переговоры</li>
+                        <li>Основы управления доходностью</li>
+                        <li>Аналитика и планирование контракта</li>
+                        <li>Управление эффективностью промо</li>
+                        <li>Совместное планирование бизнеса</li>
+                        <li>Чемпионат по Переговорным поединкам</li>
+                        <li>Бизнес-симуляция «Выгодно и точка!» на развитие планирования, управления категорией,
+                            переговоров                        </li>
+                        <li>Конкурсы бизнес-кейсов по развитию клиента</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--вторая колонка про реки-->
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Полевые силы</h5>
+                    <img src="images/slides/slide2.jpg" class="card-img-top rounded" alt="Медицинские и аптечные представители">
+                    <p class="card-text">
+                        <ul>
+                            <li>Эффективный визит к врачу</li>
+                            <li>Шаги визита в аптеку</li>
+                            <li>Навыки продаж</li>
+                            <li>Работа с возражениями</li>
+                            <li>Эффективная коммуникация и влияние</li>
+                            <li>Типология личности</li>
+                            <li>Продажа идеи и эффективная аргументация</li>
+                            <li>Финансовая грамотность</li>
+                        </ul>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--третья колонка про походы-->
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Лидеры коммерческих команд</h5>
+                    <img src="images/slides/slide1.jpg" class="card-img-top rounded" alt="Лидеры коммерческих команд">
+                    <p class="card-text">
+                    <ul>
+                        <li>Основы управления</li>
+                    <li>Коучинг, наставничество и обратная связь</li>
+                    <li>Полевой коучинг</li>
+                    <li>Развитие бизнеса на территории</li>
+                    <li>Финансовая грамотность</li>
+                    <li>Ситуационное лидерство</li>
+                    <li>Создание высокоэффективных команд</li>
+                    <li>Мотивация сотрудников</li>
+                    <li>Фасилитация для менеджеров команд</li>
+                    <li>Основы управления</li>
+
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--контент end-->
     <!--карусель Целевые аудитории для консалтинга и оценки-->
- <br>
+    <br>
 
     <div class="row"><!--помещаем в блок для центровки-->
-        <div class="col-10 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
+        <div class="col-sm-8 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
 
-<!--        <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
-    <br>
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+            <!--        <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
+            <br>
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/slides/slide1.jpg" class="d-block w-100"
+                             alt="Менеджеры по работе с ключевыми клиентами">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Менеджеры по работе с ключевыми клиентами</h5>
+                            <p>Key Account Managers (KAM)</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/slides/slide2.jpg" class="d-block w-100"
+                             alt="медицинские и аптечные представители">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Полевые силы</h5>
+                            <p>медицинские и аптечные представители</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/slides/slide3.jpg" class="d-block w-100" alt="Лидеры коммерческих команд">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Лидеры коммерческих команд</h5>
+                            <p>First Line Managers</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Предыдущий</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Следующий</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/slides/slide1.jpg" class="d-block w-100" alt="Менеджеры по работе с ключевыми клиентами">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Менеджеры по работе с ключевыми клиентами</h5>
-                        <p>Key Account Managers (KAM)</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/slides/slide2.jpg" class="d-block w-100" alt="медицинские и аптечные представители">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Полевые силы</h5>
-                        <p>медицинские и аптечные представители</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/slides/slide3.jpg" class="d-block w-100" alt="Лидеры коммерческих команд">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Лидеры коммерческих команд</h5>
-                        <p>First Line Managers</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Предыдущий</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Следующий</span>
-            </button>
         </div>
-        </div>
-     </div>
+    </div>
     <!-- end of Карусель Целевые аудитории для оценки-->
 </div>
+<!--подвал-->
+<br>
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2024 С нами по свету
+    </div>
+    <!-- Copyright -->
+</footer>
+<!--подвал end-->
 <!-- end of Главный контейнер -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
