--- a/about.html
+++ b/about.html
@@ -123,19 +123,20 @@
     <!-- end of шапка -->
     <!--хлебные крошки-->
         <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-    <li class="breadcrumb-item"><a href="contacts.html">Контактыа</a></li>
-    <li class="breadcrumb-item active" aria-current="page">О нас</li>
-  </ol>
-</nav>
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+            <li class="breadcrumb-item"><a href="contacts.html">Контакты</a></li>
+            <li class="breadcrumb-item active" aria-current="page">О нас</li>
+          </ol>
+        </nav>
     <!--хлебные крошки-->
 
 
 </div>
 <!--подвал-->
 <br>
-<footer class="bg-body-tertiary text-center text-lg-start">
+<footer class="nav_flag text-center text-lg-start">
+<!--<footer class="bg-body-tertiary text-center text-lg-start">-->
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(255, 255, 255, 0.05);">
         © 2024 Флагиан Консалтинг
