--- a/css_tricks1.html
+++ b/css_tricks1.html
@@ -7,24 +7,18 @@
 
 </head>
 <body>
-<header></header>
-    <div class="buttons">
-  <p class="intro">Click the <code>border-box</code> button to fix the layout with the power of Box Sizing!</p>
-  <button id="content">content-box</button>
-  <button id="border">border-box</button>
+<div class="wrapper">
+    <header class="header">
+        <h1>Header</h1>
+    </header>
+    <article class="main">
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
+            tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
+            semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+    </article>
+    <aside class="aside aside-1"><h2>Aside 1</h2></aside>
+    <aside class="aside aside-2"><h2>Aside 2</h2></aside>
+    <footer class="footer">Footer</footer>
 </div>
-<div class="parent">
-  <p>Parent div with 50% width.</p>
-  <div class="child">
-    <p>Child div with 90% width, 4px black border, and 20% padding </p>
-  </div>
-  <div class="twins">
-    <p>Child div with 50% width, 4px black border, and 1em padding</p>
-  </div>
-  <div class="twins">
-    <p>Child div with 50% width, 4px black border, and 1em padding</p>
-  </div>
-</div>
-<!--<script src="js/tricks1.js"></script>-->
 </body>
 </html>
