--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Флагиан Консалтинг</title>
     <!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
-    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
+<!--    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -25,7 +25,7 @@
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
-        <nav class="navbar navbar-dark nav_flag">
+        <nav class="navbar navbar-dark nav_flag fixed-top">
             <!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_2.png"
@@ -127,16 +127,19 @@
 <!--            <li class="breadcrumb-item active " aria-current="page" style="color: #78E100 ">Главная</li>-->
 <!--        </ol>-->
 <!--    </nav>-->
-            <nav aria-label="breadcrumb">
+    <br><br><br>
+    <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page"style="color: #78E100">Главная</li>
+            <li class="breadcrumb-item active" aria-current="page" style="color: #78E100">Главная</li>
             <li class="breadcrumb-item"><a href="about.html">Команда экспертов</a></li>
             <li class="breadcrumb-item"><a href="contacts.html">Контакты</a></li>
 <!--            <li class="breadcrumb-item active" aria-current="page">О нас</li>-->
           </ol>
         </nav>
     <!--хлебные крошки-->
+<!--титульный лист КТО?-->
 
+<!--end of титульный лист КТО?-->
     <!--контент-->
     <div class="row m-5"><!--помещаем в блок для трех колонок-->
         <h1 class="text-center pb-3">Тренинги</h1>
