--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="row"><!--помещаем в блок для центровки-->
         <div class="col-sm-8 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
 
-            <h2 class="montserrat-alternates-bold">Целевые аудитории для оценки</h2>
+            <h2 class="text-center">Целевые аудитории для оценки</h2>
             <br>
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
