--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <!-- Главный контейнер -->
-<div class="container-fluid">
+<div class="container">
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
@@ -139,24 +139,27 @@
     </nav>
     <!--хлебные крошки-->
     <!--титульный лист КТО?-->
-    <div class="container-fluid text-center">
+    <div class="container text-center">
 
         <div class="row justify-content-md-center">
-            <div class="col col-lg-2">
+            <div class="col col-lg-1">
                 <h2 class="oswald-container">1 of 3</h2><br>
-                <h3>1 of 3</h3>
+<!--                <h3>1 of 3</h3>-->
             </div>
 
             <!--                центральная колонка-->
 <!--            <div class="container-fluid text-center centre">-->
 
-                <div class="col-md-auto"><h1 class="titul">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>  <!--Переменная ширина контента-->
-                    <h1 class="oswald-container titul_2">ДЛЯ ФАРМ КОМПАНИЙ</h1>
-                    <h3 class="titul_3">Комплексные решения для роста эффективности персонала под ключ</h3>
+                <div class="col col-md-auto">
+                    <br><br><br>
+                    <h1 class="titul">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>  <!--Переменная ширина контента-->
+                    <h2 class="oswald-container titul_2">ДЛЯ ФАРМ КОМПАНИЙ</h2>
+                    <br>
+                    <h4 class="titul_3">Комплексные решения для роста эффективности персонала под ключ</h4>
                 </div>
 <!--            </div>-->
                             <!--                Правая колонка-->
-                <div class="col col-lg-2">
+                <div class="col col-lg-1">
                     <img src="images/team_expert_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
                          alt="Команда экспертов">
                 </div>
