--- a/index.html
+++ b/index.html
@@ -139,28 +139,29 @@
     </nav>
     <!--хлебные крошки-->
     <!--титульный лист КТО?-->
+
     <div class="container text-center">
 
-        <div class="row justify-content-md-center">
-            <div class="col col-lg-1">
-                <h2 class="oswald-container">1 of 3</h2><br>
-<!--                <h3>1 of 3</h3>-->
+        <div class="row justify-content-md-center align-items-center">
+            <div class="col col-lg-3">
+                    <img src="images/head_1.png"  title="развивайся или усни!!"
+                         alt="Команда экспертов">
             </div>
 
             <!--                центральная колонка-->
 <!--            <div class="container-fluid text-center centre">-->
 
                 <div class="col col-md-auto">
-                    <br><br><br>
+<!--                    <br><br><br>-->
                     <h1 class="titul">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>  <!--Переменная ширина контента-->
                     <h2 class="oswald-container titul_2">ДЛЯ ФАРМ КОМПАНИЙ</h2>
-                    <br>
-                    <h4 class="titul_3">Комплексные решения для роста эффективности персонала под ключ</h4>
+<!--                    <br>-->
+<!--                    <div class="titul_3">Комплексные решения для роста эффективности персонала под ключ</div>-->
                 </div>
 <!--            </div>-->
                             <!--                Правая колонка-->
-                <div class="col col-lg-1">
-                    <img src="images/team_expert_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
+                <div class="col col-lg-3">
+                    <img src="images/team_expert_50_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
                          alt="Команда экспертов">
                 </div>
 
