--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
     <!--хлебные крошки-->
     <!--титульный лист КТО?-->
 
-    <div class="container text-center">
+    <div class="container-fluid text-center">
 
         <div class="row justify-content-md-center align-items-center">
+<!--            <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-4">-->
             <div class="col col-lg-3">
                     <img src="images/head_1.png"  title="развивайся или усни!!"
                          alt="Команда экспертов">
@@ -164,7 +165,7 @@
                     <img src="images/team_expert_50_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
                          alt="Команда экспертов">
                 </div>
-
+<!--            </div>-->
             <!--  </div>-->
             <!--  <div class="row">-->
             <!--    <div class="col">-->
@@ -178,6 +179,7 @@
             <!--    </div>-->
             <!--  </div>-->
         </div>
+    </div>
         <!--end of титульный лист КТО?-->
         <!--контент-->
         <div class="row m-5"><!--помещаем в блок для трех колонок-->
