--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="offcanvas-body ">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Консалтинг</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Консалтинг</a>
                             </li>
 
                             <li class="nav-item dropdown">
@@ -54,9 +54,9 @@
                                     Оценка персонала
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Какие задачи решаем</a></li>
-                                    <li><a class="dropdown-item" href="#">Оценочные инструменты</a></li>
-                                    <li><a class="dropdown-item" href="#">Целевые аудитории для оценки</a></li>
+                                    <li><a class="dropdown-item" disabled>Какие задачи решаем</a></li>
+                                    <li><a class="dropdown-item" disabled>Оценочные инструменты</a></li>
+                                    <li><a class="dropdown-item" disabled>Целевые аудитории для оценки</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -105,7 +105,7 @@
                                 <a class="nav-link" href="#">Этапы реализации проектов</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>
+<!--                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>-->
                                 <a class="nav-link" href="about.html">О нас</a>
                                 <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>
                             </li>
@@ -144,8 +144,8 @@
 
         <div class="row justify-content-md-center align-items-center">
 <!--            <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-4">-->
-            <div class="col col-lg-3">
-                    <img src="images/head_1.png"  title="развивайся или усни!!"
+            <div class="col col-lg-3"w-100>
+                    <img src="images/head_1.png"  title="развивайся или усни!"
                          alt="Команда экспертов">
             </div>
 
@@ -155,13 +155,13 @@
                 <div class="col col-md-auto">
 <!--                    <br><br><br>-->
                     <h1 class="titul">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>  <!--Переменная ширина контента-->
-                    <h2 class="oswald-container titul_2">ДЛЯ ФАРМ КОМПАНИЙ</h2>
+                    <h1 class="oswald-container titul_2">ДЛЯ ФАРМ КОМПАНИЙ</h1>
 <!--                    <br>-->
 <!--                    <div class="titul_3">Комплексные решения для роста эффективности персонала под ключ</div>-->
                 </div>
 <!--            </div>-->
                             <!--                Правая колонка-->
-                <div class="col col-lg-3">
+                <div class="col col-lg-3 w-25">
                     <img src="images/team_expert_50_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
                          alt="Команда экспертов">
                 </div>
@@ -182,8 +182,8 @@
     </div>
         <!--end of титульный лист КТО?-->
         <!--контент-->
-        <div class="row m-5"><!--помещаем в блок для трех колонок-->
-            <h1 class="text-center pb-3">Тренинги</h1>
+        <div class="row m-6"><!--помещаем в блок для трех колонок-->
+            <h1 class="text-center pb-3" title="Что предлагаем">Тренинги</h1>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--первая колонка про Менеджеров-->
                 <div class="card h-100">
                     <div class="card-body bg-card">
