--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page" style="color: #78E100">Главная</li>
-            <li class="breadcrumb-item"><a href="about.html">Команда экспертов</a></li>
+            <li class="breadcrumb-item" ><a href="about.html">Команда экспертов</a></li>
             <li class="breadcrumb-item"><a href="contacts.html">Контакты</a></li>
             <!--            <li class="breadcrumb-item active" aria-current="page">О нас</li>-->
         </ol>
@@ -262,7 +262,7 @@
         <br>
 
         <div class="row"><!--помещаем в блок для центровки-->
-            <div class="col-sm-8 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
+            <div class="col-sm-12 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
 
                 <h2 class="text-center">Целевые аудитории для оценки</h2>
                 <br>
@@ -278,26 +278,26 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/slides/slide1.jpg" class="d-block w-100"
+                            <img src="images/slides/slide1.jpg" title="Key Account Managers (KAM)" class="d-block w-100"
                                  alt="Менеджеры по работе с ключевыми клиентами">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Менеджеры по работе с ключевыми клиентами</h5>
-                                <p>Key Account Managers (KAM)</p>
+                            <div class="carousel-caption d-none d-md-block ">
+                                <h4 class="carusel">Менеджеры по работе с ключевыми клиентами</h4>
+<!--                                <p>Key Account Managers (KAM)</p>-->
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/slides/slide2.jpg" class="d-block w-100"
+                            <img src="images/slides/slide2.jpg" title="Медицинские и аптечные представители" class="d-block w-100"
                                  alt="медицинские и аптечные представители">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Полевые силы</h5>
-                                <p>медицинские и аптечные представители</p>
+                                <h4 class="carusel">Полевые силы</h4>
+                            <!-- <p>медицинские и аптечные представители</p>-->
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/slides/slide3.jpg" class="d-block w-100" alt="Лидеры коммерческих команд">
+                            <img src="images/slides/slide3.jpg" title="First Line Managers" class="d-block w-100" alt="Лидеры коммерческих команд">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Лидеры коммерческих команд</h5>
-                                <p>First Line Managers</p>
+                                <h4 class="carusel">Лидеры коммерческих команд</h4>
+<!--                             <p>First Line Managers</p>-->
                             </div>
                         </div>
                     </div>
