--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!--хлебные крошки-->
     <!--титульный лист КТО?-->
 
-    <div class="container-fluid text-center">
+    <div class="container-fluid overflow-hidden text-center">
 
         <div class="row justify-content-md-center align-items-center">
 <!--            <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-4">-->
@@ -162,7 +162,7 @@
 <!--            </div>-->
                             <!--                Правая колонка-->
                 <div class="col col-lg-3 w-25">
-                    <img src="images/team_expert_50_50.jpg" class="card-img-mid rounded" title="Команда экспертов"
+                    <img src="images/team_expert_50_50.jpg" class="rounded  title="Команда экспертов"
                          alt="Команда экспертов">
                 </div>
 <!--            </div>-->
